xxx, S3QL 0.18

  * Added --strip-meta option to mount.s3ql
  
  * stat.s3ql, tune.s3ql and cp.s3ql have been renamed to
    s3qlstat, s3qltune and s3qlcp respectively.
  
2010-06-29, S3QL 0.17

  * The local and sftp backends now spread their files into different 
    sub-directories.
     
  * Amazon S3 Reduced Redundancy Storage (RRS) is now supported. To
    use it, use a storage url of the form s3rr://<bucket> instead of
    s3://<bucket>.

2010-06-15, S3QL 0.16

  * Fixed problem with readdir() returning entries twice or skipping
    them if files are added or removed while readdir() is in progress.

  * Fixed build problem on Gentoo.

  * fsck.s3ql now does a rudimentary check if the file system is still
    mounted to prevent checking a mounted file system.


2010-05-28, S3QL 0.15

  * Fixed test cases to handle systems with low system clock resolution.

  * Corrected installation instructions for Debian

  * mount.s3ql: instead of --bzip2, --zlib and --no-compress, there
    is now just one option --compress=<alg>.

  * File system metadata is now uploaded in with all indices. This
    makes mounting the file system much faster. Only if LZMA
    compression has been chosen, indices are stripped for storage and
    regenerated on the next mount.

2010-05-14, S3QL 0.14

  * fsck now detects if a cached block is dirty and commits only dirty
    blocks to the backend.

  * Installation in Debian and Ubuntu is now much simpler, it can be
    done completely with aptitude.

2010-05-04, S3QL 0.13

  * S3QL now works with Ubuntu Karmic / 10.04 LTS

  * The test command no longer produces bogus error messages after
    all tests have completed.

  * The umount.s3ql command now properly handles the 'fuser' output
    with Kernel 2.6.32 (before it always refused to unmount, claiming
    that the mount point was busy).

  * The compression can now be specified independently from the encryption,
    so it is possible to have an unencrypted, but compressed file system.
