@@ -1,6 +1,6 @@
 Please note that you are using a bleeding edge, unstable development version of
 S3QL that has been cloned from the Mercurial repository. File systems created with this
 version may not work with any other version of S3QL (including the forthcoming
-release). s3qltune may not be able to upgrade file systems either to or from
+release). s3qladm may not be able to upgrade file systems either to or from
 this version. You have been warned.
 
