@@ -1,8 +1,8 @@
 #!/usr/bin/env python
 '''
-s3qltune - this file is part of S3QL (http://s3ql.googlecode.com)
+s3qlctrl - this file is part of S3QL (http://s3ql.googlecode.com)
 
-Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
+Copyright (C) 2010 Nikolaus Rath <Nikolaus@rath.org>
 
 This program can be distributed under the terms of the GNU LGPL.
 '''
@@ -19,5 +19,5 @@ if (os.path.exists(os.path.join(basedir, 'setup.py')) and
     os.path.exists(os.path.join(basedir, 'src', 's3ql', '__init__.py'))):
     sys.path = [os.path.join(basedir, 'src')] + sys.path
     
-import s3ql.cli.tune
-s3ql.cli.tune.main(sys.argv[1:])
+import s3ql.cli.ctrl
+s3ql.cli.ctrl.main(sys.argv[1:])
