@@ -4,8 +4,8 @@
  Other S3QL Commands
 =====================
 
-Getting file system statistics
-==============================
+`s3lstat` -- Get file system statistics
+=======================================
 
 You can get more information about a mounted S3QL file system with the
 `s3qlstat` command. It has the following syntax::
@@ -25,17 +25,9 @@ system (even if it was mounted with `--allow-other` or
 `--allow-root`). This limitation will hopefully be removed in the
 future (see `issue 155 <http://code.google.com/p/s3ql/issues/detail?id=155>`_).
 
-Changing the Passphrase
-=======================
 
-To change the passphrase a bucket, use the `s3qltune` command::
-
-  s3qltune --change-passphrase  <storage url>
-
-The passphrase can only be changed when the bucket is not mounted.
-
-Checking for Errors
-===================
+`fsck.s3ql` - Check File System for Errors
+==========================================
 
 If, for some reason, the filesystem has not been correctly unmounted,
 or if you suspect that there might be errors, you should run the
@@ -54,9 +46,34 @@ Possible options are:
   --batch            If user input is required, exit without prompting.
   --force            Force checking even if file system is marked clean.
 
+  
+
+`s3qlctrl` - Control a mounted S3QL File System
+===============================================
+
+
+
+`s3qladm` - Manage S3QL Buckets
+================================
+
+
+The `s3qladm` command performs various operations on S3QL buckets.
+The file system contained in the bucket *must not be mounted* when
+using `s3qladm` or things will go wrong badly.
+
+
+
+Changing the Passphrase
+-----------------------
+
+To change the passphrase a bucket, use the `s3qladm` command::
+
+  s3qladm --change-passphrase  <storage url>
+
+The passphrase can only be changed when the bucket is not mounted.
 
 Upgrading the file system
-=========================
+-------------------------
 
 If you have installed a new version of S3QL, is usually necessary to
 upgrade your file system metadata. Note that afterwards the file system
@@ -69,7 +86,7 @@ During the upgrade you have to make very sure that the command is not
 interrupted, and that no one else tries to mount, fsck or upgrade the
 file system at the same time.
 
-Finally, note that `s3qltune` can only upgrade from the *previous*
+Finally, note that `s3qladm` can only upgrade from the *previous*
 S3QL release, so you cannot directly upgrade e.g. from version 0.10 to
 version 0.12. You first have to download S3QL 0.11 and upgrade the
 file system from 0.10 to 0.11 before you can install S3QL 0.12 and
@@ -78,15 +95,14 @@ upgrade the file system from 0.11 to 0.12.
 To upgrade a file system from the previous to the current revision,
 execute ::
 
-  s3qltune --upgrade <storage url>
-
+  s3qladm --upgrade <storage url>
 
 
 Deleting a file system
-======================
+----------------------
 
 A file system can be deleted with::
 
-  s3qltune --delete <storage url>
+  s3qladm --delete <storage url>
 
 This physically deletes all the data and file system structures.
