@@ -103,8 +103,9 @@ def main():
                          's3qlcp = s3ql.cli.cp:main',
                          'expire_backups = s3ql.cli.expire_backups:main',
                          's3qlstat = s3ql.cli.statfs:main',
-                         's3qltune = s3ql.cli.tune:main',
-		                         ]
+                         's3qladm = s3ql.cli.adm:main',
+                         's3qlctrl = s3ql.cli.ctrl:main',
+                         ]
                           },
           install_requires=['apsw >= 3.6.19',
                             'pycryptopp',
